--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.4.3",
     "shelljs": "^0.8.3",
     "vue": "^2.6.10",
+    "vue-csv-import": "^2.3.9",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
