--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "shelljs": "^0.8.3",
     "vue": "^2.6.10",
     "vue-csv-import": "^2.3.9",
+    "vue-router": "^3.1.3",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
