--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.4.3",
+    "js-cookie": "^2.2.1",
     "shelljs": "^0.8.3",
     "vue": "^2.6.10",
     "vue-csv-import": "^2.3.9",
