--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "chart.js": "^2.9.3",
     "core-js": "^3.4.3",
     "js-cookie": "^2.2.1",
     "shelljs": "^0.8.3",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-csv-import": "^2.3.9",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0"
